--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-otp-input": "^3.1.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
