--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
+    "he": "^1.2.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +36,7 @@
     "react-slideshow-image": "^4.3.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.2"
   },
