--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
@@ -39,7 +40,8 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "tinymce": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^9.9.0"
