--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
     "he": "^1.2.0",
+    "html-react-parser": "^5.1.16",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
