--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@tinymce/tinymce-react": "^5.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
