--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
