--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-slideshow-image": "^4.3.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "sharethis-reactjs": "^1.6.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
