--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.2",
+    "swiper": "^11.1.15",
     "tinymce": "^7.3.0"
   },
   "devDependencies": {
