--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.2",
     "file-saver": "^2.0.5",
     "firebase": "^10.13.1",
     "he": "^1.2.0",
